# serializer version: 1
# name: test_select_ok[select_as_struct]
  '''
  SELECT AS STRUCT column1 FROM table1
  
  query_expr
    select
      select_metadata
        select_shape	STRUCT
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
  '''
# ---
# name: test_select_ok[select_as_value]
  '''
  SELECT AS VALUE column1 FROM table1
  
  query_expr
    select
      select_metadata
        select_shape	VALUE
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
  '''
# ---
# name: test_select_ok[select_distinct]
  '''
  SELECT DISTINCT column1 FROM table1
  
  query_expr
    select
      select_metadata
        select_mode	DISTINCT
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
  '''
# ---
# name: test_select_ok[select_dot_star_except]
  '''
  SELECT struct_column.* EXCEPT(column1, column2) FROM table1
  
  query_expr
    select
      select_metadata
      select_list
        select_dot_star
          ident	struct_column
          select_except
            select_except_list
              select_except_item
                ident	column1
              select_except_item
                ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
  '''
# ---
# name: test_select_ok[select_dot_star_replace]
  '''
  SELECT struct_column.* REPLACE(1 AS column1, 2 AS column2) FROM table1
  
  query_expr
    select
      select_metadata
      select_list
        select_dot_star
          ident	struct_column
          select_replace
            select_replace_list
              select_replace_item
                integer_literal	1
                ident	column1
              select_replace_item
                integer_literal	2
                ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
  '''
# ---
# name: test_select_ok[select_from_alias_explicit]
  '''
  SELECT column1 FROM table1 AS alias1
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          as_alias
            ident	alias1
  '''
# ---
# name: test_select_ok[select_from_alias_implicit]
  '''
  SELECT column1 FROM table1 alias1
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          as_alias
            ident	alias1
  '''
# ---
# name: test_select_ok[select_from_time_travel]
  '''
  SELECT column1 FROM table1 FOR SYSTEM_TIME AS OF '1970-01-01'
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          time_travel
            string_literal	'1970-01-01'
  '''
# ---
# name: test_select_ok[select_list_alias_explicit]
  '''
  SELECT column1 AS alias1 FROM table1
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
          as_alias
            ident	alias1
      from_clause
        from_item_table
          path_expression
            ident	table1
  '''
# ---
# name: test_select_ok[select_list_alias_implicit]
  '''
  SELECT column1 alias1 FROM table1
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
          as_alias
            ident	alias1
      from_clause
        from_item_table
          path_expression
            ident	table1
  '''
# ---
# name: test_select_ok[select_list_multi]
  '''
  SELECT column1, column2 FROM table1
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
        select_expr
          ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
  '''
# ---
# name: test_select_ok[select_list_single]
  '''
  SELECT column1 FROM table1
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
  '''
# ---
# name: test_select_ok[select_list_trailing_comma]
  '''
  SELECT column1, FROM table2
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table2
  '''
# ---
# name: test_select_ok[select_literal]
  '''
  SELECT 1
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          integer_literal	1
  '''
# ---
# name: test_select_ok[select_star]
  '''
  SELECT * FROM table1
  
  query_expr
    select
      select_metadata
      select_list
        select_star
      from_clause
        from_item_table
          path_expression
            ident	table1
  '''
# ---
# name: test_select_ok[select_star_except]
  '''
  SELECT * EXCEPT(column1, column2) FROM table1
  
  query_expr
    select
      select_metadata
      select_list
        select_star
          select_except
            select_except_list
              select_except_item
                ident	column1
              select_except_item
                ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
  '''
# ---
# name: test_select_ok[select_star_replace]
  '''
  SELECT * REPLACE(1 AS column1, 2 AS column2) FROM table1
  
  query_expr
    select
      select_metadata
      select_list
        select_star
          select_replace
            select_replace_list
              select_replace_item
                integer_literal	1
                ident	column1
              select_replace_item
                integer_literal	2
                ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
  '''
# ---
# name: test_select_ok[select_star_scoped]
  '''
  SELECT column1.* FROM table1
  
  query_expr
    select
      select_metadata
      select_list
        select_dot_star
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
  '''
# ---
# name: test_select_ok[select_star_scoped_nested]
  '''
  SELECT column1.column2.* FROM table1
  
  query_expr
    select
      select_metadata
      select_list
        select_dot_star
          path_expression
            ident	column1
            ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
  '''
# ---
# name: test_select_ok[select_subqueries]
  '''
  SELECT
      *,
      column1,
      (SELECT 1) AS column2
  FROM
      (SELECT column7 FROM table2) AS alias2
  
  query_expr
    select
      select_metadata
      select_list
        select_star
        select_expr
          ident	column1
        select_expr
          subquery
            query_expr
              select
                select_metadata
                select_list
                  select_expr
                    integer_literal	1
          as_alias
            ident	column2
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                select_metadata
                select_list
                  select_expr
                    ident	column7
                from_clause
                  from_item_table
                    path_expression
                      ident	table2
          as_alias
            ident	alias2
  '''
# ---
# name: test_subquery_ok[select_from_subquery]
  '''
  SELECT column1 FROM (SELECT column1 FROM table1)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                select_metadata
                select_list
                  select_expr
                    ident	column1
                from_clause
                  from_item_table
                    path_expression
                      ident	table1
  '''
# ---
# name: test_subquery_ok[select_from_subquery_aliased]
  '''
  SELECT column1 FROM (SELECT column1 FROM table1) AS table2
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                select_metadata
                select_list
                  select_expr
                    ident	column1
                from_clause
                  from_item_table
                    path_expression
                      ident	table1
          as_alias
            ident	table2
  '''
# ---
# name: test_subquery_ok[subquery]
  '''
  (SELECT 1)
  
  query_expr
    subquery
      query_expr
        select
          select_metadata
          select_list
            select_expr
              integer_literal	1
  '''
# ---
# name: test_subquery_ok[subquery_nested]
  '''
  (SELECT (SELECT (SELECT 1)))
  
  query_expr
    subquery
      query_expr
        select
          select_metadata
          select_list
            select_expr
              subquery
                query_expr
                  select
                    select_metadata
                    select_list
                      select_expr
                        subquery
                          query_expr
                            select
                              select_metadata
                              select_list
                                select_expr
                                  integer_literal	1
  '''
# ---
# name: test_unnest_ok[unnest]
  '''
  SELECT column1 FROM UNNEST(array1)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
  '''
# ---
# name: test_unnest_ok[unnest_alias]
  '''
  SELECT column1 FROM UNNEST(array1) AS alias1
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
          as_alias
            ident	alias1
  '''
# ---
# name: test_unnest_ok[unnest_alias_with_offset_alias]
  '''
  SELECT column1 FROM UNNEST(array1) AS alias1 WITH OFFSET AS alias2
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
          as_alias
            ident	alias1
          from_unnest_offset_expr
            as_alias
              ident	alias2
  '''
# ---
# name: test_unnest_ok[unnest_with_offset]
  '''
  SELECT column1 FROM UNNEST(array1) WITH OFFSET
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
          from_unnest_offset_expr
  '''
# ---
# name: test_unnest_ok[unnest_with_offset_alias]
  '''
  SELECT column1 FROM UNNEST(array1) WITH OFFSET AS alias1
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
          from_unnest_offset_expr
            as_alias
              ident	alias1
  '''
# ---
